--- a/pages/cat.Imagery/Disposable-Camera-Filter/styles.css
+++ b/pages/cat.Imagery/Disposable-Camera-Filter/styles.css
@@ -138,6 +138,7 @@ body {
   inset: 0;
   padding: 16px;
   overflow-y: auto;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
   display: none;
 }
